--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,5 @@
 
 @font-face {
     font-family: "Apple Color Emoji";
-    src: url("//db.onlinewebfonts.com/t/5ab304ade0d4f62d027d12464ca69443.eot");
-    src: url("//db.onlinewebfonts.com/t/5ab304ade0d4f62d027d12464ca69443.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/5ab304ade0d4f62d027d12464ca69443.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/5ab304ade0d4f62d027d12464ca69443.woff") format("woff"), url("//db.onlinewebfonts.com/t/5ab304ade0d4f62d027d12464ca69443.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/5ab304ade0d4f62d027d12464ca69443.svg#Apple Color Emoji") format("svg");
+    src: url("https://github.com/samuelngs/apple-emoji-linux/releases/download/ios-15.4/AppleColorEmoji.ttf");
 }
